# gwgasf

./: .gitignore  .gitmodules  FFT Accuracy Results.csv  FFT Validation Results.csv  GASF Accuracy Results.csv  GASF Multiclass Classifier.ipynb  GASF Validation Results.csv  GASF vs FFT vs QT (Optuna Test).ipynb  GASF vs FFT vs QT.ipynb  GASF vs Spectrograms.ipynb  GASF vs Spectrograms_SLIM.ipynb  GASF vs Spectrograms_SLIM.py  GASFvsSpectrograms_SLIM.py  GW3_Transformer.pptx  LICENSE  Lab 9 - CNN diagram.ipynb  Lab 9 - GAF Images.ipynb  Lab 9.ipynb  Lab_8_DanielFredin_ColeWelch.ipynb  Lab_8_DanielFredin_ColeWelsh.ipynb  Lab_9_DanielFredin_ColeWelch_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  New Data _ TESTING_GW GASF vs Spectrogram.ipynb  New Data_TESTING_GW GASF vs Spectrogram.ipynb  New Data_Testing spectrograms_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  New Data_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  Original Data_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  Orignal Data_Testing spectrograms_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  Phys 417 Poster sections .gdoc  Q Accuracy Results.csv  Q Validation Results.csv  README-Nautilus.md  README.md  TESTING_GW GASF vs Spectrogram.ipynb  Testing spectrograms_Unraveling Gravitational Ripples - Neural Network Classification.ipynb  Untitled-1.py  Vertical Glitch Poster.pptx  pyproject.toml
Poster/: A3D3_GW Glitch UW poster.pptx  A3D3_Horizontal_GW Glitch UW poster.pptx  A3D3_Vertical_GW Glitch UW poster.pptx  GW Glitch BACKUP poster.pptx  GW Glitch UW poster MODIFIED.pptx  GW Glitch UW poster.pptx
data/: README.md
deployments/: test_dep.yaml  train_dep.yaml  train_job.yaml
docs/: README.md
gasf_data/: README.md  data_making.ipynb  pyproject.toml
gasf_data/gasf_data/sampling/: masking.py
gasf_data/gasf_data/utils/: h5_reader.py
images/: Dockerfile  DockerfileTest  gwgasf.def  gwgasf_dep.yaml  requirements.txt  s3-credentials.yaml  test_dep.yaml  test_job.yaml
libs/GASF/: pyproject.toml
libs/GASF/GASF/sampling/: masking.py
libs/example/: README.md  data_making.ipynb
libs/gasf/: pyproject.toml
results/: README.md
src/: GASF Multiclass Classifier.ipynb  README.md  arguments.toml  arguments.yaml  entrypoint.sh  main.py  pyproject.toml  view-data.ipynb
src/GASF/: README.md  pyproject.toml
src/GASF/GASF/: GASF Multiclass Classifier.ipynb
src/GASF_Multiclass_Classifier/: confusion_matrix_analysis.py  data.py  main.py  model_training.py  prepare_data.py  test_plots.py
src/gasf/utils/: __init__.py  h5_reader.py
src/libs/architecture/: cnn_model.py
src/libs/data/: create_dataloaders.py  data_utils.py  s3_utils.py
src/libs/train/: model_utils.py  train_model.py
src/libs/utils/: analysis_utils.py  argument_parser.py  plot_utils.py  s3_helper.py
src/old/: GASF Multiclass Classifier (Optuna Test).ipynb  GASF Multiclass Classifier.ipynb  GASF vs FFT vs QT.ipynb  GASF vs Spectrograms_SLIM.ipynb
