[tool.poetry]
name = "GASF"
version = "0.1.0"
description = "Gravitational Wave Signal Classification"
authors = ["Daniel Fredin <dfredin@uw.edu>, Cole Welch <colewelch151@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.21.0"
pandas = ">=1.5.0"
h5py = ">=3.5.0"
matplotlib = ">=3.6.0"
seaborn = ">=0.12.0"
torch = ">=1.12.0"
scipy = ">=1.6.2"
gwpy = ">=2.1.5"
tqdm = ">=4.66.1"
torchsummary = ">=1.5.1"
scikit-learn = ">=1.1.0"
ml4gw = ">=0.1.0"
ipykernel = ">=6.20.2"
pyts = "=0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
