[tool.poetry]
name = "GASF"
version = "0.1.0"
description = "Gravitational Wave Signal Classification"
authors = ["Daniel Fredin <dfredin@uw.edu>, Cole Welch <colewelch151@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.24.1"
matplotlib = ">=3.7.1"
h5py = ">=3.7.0"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp39-cp39-win_amd64.whl"}
torchsummary = ">=1.5.1"
pyts = "=0.13.0"
tqdm = ">=4.65.0"
ipykernel = ">=6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
