[tool.poetry]
name = "gasf_data"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Andy Chen <andy.c.80297@gmail.com>"]
license = "MIT"
packages = [
    {include = "gasf_data"}
]

[tool.poetry.dependencies]
python = "^3.9"
ml4gw = {path = "../ml4gw", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
